--- a/.github/workflows/update-webhook.yml
+++ b/.github/workflows/update-webhook.yml
@@ -3,7 +3,7 @@ name: Update Telegram Webhook
 on:
   push:
     branches:
-      - main  # Chạy khi bạn cập nhật vào nhánh `main`
+      - main
 
 jobs:
   set-webhook:
@@ -15,4 +15,4 @@ jobs:
 
     - name: Set Telegram Webhook
       run: |
-        curl -X POST "https://api.telegram.org/bot${{ secrets. 7751817961:AAFqeVrH5od4p8tPW8TCQ_FeO7YPXCm2rPo }}/setWebhook?url=${{ secrets. https://script.google.com/macros/s/AKfycbzdgWNYFihtkiG0czd0bZ7tP8pciIoCCLliEEa-YJof1ofGc2EdBv07XjP4GyNjIPajrQ/exec }}"
+        curl -X POST "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/setWebhook?url=${{ secrets.GOOGLE_APPS_SCRIPT_URL }}"
